--- a/01-manual-jquery/assets/css/layout.css
+++ b/01-manual-jquery/assets/css/layout.css
@@ -39,7 +39,8 @@ body {
     gap: 2rem;
 }
 
-button {
+button,
+input[type="button"] {
     padding: 1rem 2rem;
     background-color: cornflowerblue;
     color: #fff;
@@ -49,9 +50,12 @@ button {
     border-radius: 5px;
 }
 
-button:hover {
+button:hover,
+input[type="button"]:hover {
     background-color: rgb(24, 56, 116)
 }
+
+
 
 
 /* background-color: rgb(230, 235, 241); */
