Refactorización - Html, Styles y Script - 1.Introducción jQuery - 3. Cuando usar jQuery

--- a/01-manual-jquery/src/styles/01-introduccion-jquery/05-recorrer-parrafos.css
+++ b/01-manual-jquery/src/styles/01-introduccion-jquery/05-recorrer-parrafos.css
@@ -19,10 +19,17 @@
     border-radius: 0.5rem;
 }
 
-
-#capa {
-    padding: 2rem; 
+p {
+    border-radius: 1rem;
+    padding: 1rem;
     color: #fff;
-    background-color: #ff8800;
-    text-align: center;
+    background-color: #ddd;
+}
+
+.rojo {
+    background-color: red;
+}
+
+.azul {
+    background-color: blue;
 }
