--- a/01-manual-jquery/src/styles/01-introduccion-jquery/07-recuperar-mostrar-datos-javascript.css
+++ b/01-manual-jquery/src/styles/01-introduccion-jquery/07-recuperar-mostrar-datos-javascript.css
@@ -4,13 +4,17 @@
     ----------  /01-manual-jquery/  -----------------------------------
     ----------  /src/styles/  -----------------------------------------
     ----------  /01-introduccion-jquery/  -----------------------------
-    ----------  /07-recuperar-mostrar-datos-javascript.css/  ----------
+    ----------  /07-recuperar-mostrar-datos-javascript.css  -----------
     -------------------------------------------------------------------
 */
 
+.layout__main {
+    margin-top: 15rem;
+    margin-bottom: 5rem;
+}
 
 .main__recuperar-mostrar-datos-javascript {
-    max-width: 102.4rem;
+    max-width: 160rem;
     width: 100%;
     display: flex;
     flex-direction: column;
@@ -19,10 +23,23 @@
     border-radius: 0.5rem;
 }
 
+#info {
+    width: 100%;
+    height: 50rem;
+    overflow-y: auto;
+    background-color: #C8D5EC;
+}
 
-#capa {
-    padding: 2rem; 
-    color: #fff;
-    background-color: #ff8800;
-    text-align: center;
+section {
+    padding: 2rem;
+    background-color: beige;
+    margin-bottom: 1rem;
+}
+
+section h3 {
+    font-size: 1.4rem;
+}
+
+section p {
+    font-size: 1.2rem;
 }
