--- a/01-manual-jquery/src/styles/01-introduccion-jquery/06-acceso-api.css
+++ b/01-manual-jquery/src/styles/01-introduccion-jquery/06-acceso-api.css
@@ -9,20 +9,44 @@
 */
 
 
+.layout__main {
+    margin-top: 15rem;
+    margin-bottom: 5rem;
+}
+
 .main__acceso-api {
     max-width: 102.4rem;
     width: 100%;
     display: flex;
     flex-direction: column;
-    gap: 2rem;
+    gap: 4rem;
     padding: 3rem;
     border-radius: 0.5rem;
 }
 
-
-#capa {
-    padding: 2rem; 
-    color: #fff;
-    background-color: #ff8800;
+#info1,
+#info2 {
+    width: 100%;
+    overflow-y: auto;
+    background-color: #C8D5EC;
     text-align: center;
+}
+
+#info1 h2,
+#info2 h2 {
+    font-size: 1.8rem;
+}
+
+.dato {
+    padding: 2rem;
+    background-color: beige;
+    margin-bottom: 1rem;
+}
+
+.dato h3 {
+    font-size: 1.4rem;
+}
+
+.dato p {
+    font-size: 1.2rem;
 }
