--- a/01-manual-jquery/src/styles/layout-header.css
+++ b/01-manual-jquery/src/styles/layout-header.css
@@ -16,6 +16,7 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    align-items: center;
     padding: 2rem;
     text-align: center;
     background: linear-gradient(to right, rgb(189, 220, 230) 20%, rgb(133, 157, 189) 40%, rgb(100, 143, 230) 60%, rgb(197, 201, 221) 80%);
@@ -33,7 +34,7 @@
 
 .header__title {
     width: 102.4rem;
-    font-size: 3.6rem;
+    font-size: 2rem;
     color: #E6EBF1;
     text-shadow: 2px 2px 5px rgba(0, 0, 0, 0.5);
 }
@@ -54,7 +55,7 @@
     }
 
     .header__title {
-        font-size: 2.8rem;
+        font-size: 1.8rem;
     }
 }
 
@@ -66,7 +67,7 @@
     }
 
     .header__title {
-        font-size: 2.4rem;
+        font-size: 1.6rem;
     }
 } 
 
@@ -78,6 +79,6 @@
     }
 
     .header__title {
-        font-size: 2rem;
+        font-size: 1.4rem;
     }
 }
