--- a/01-manual-jquery/src/styles/02-primeros-pasos-jquery-por-la-practica/03-mostrar-ocultar-elementos.css
+++ b/01-manual-jquery/src/styles/02-primeros-pasos-jquery-por-la-practica/03-mostrar-ocultar-elementos.css
@@ -9,11 +9,6 @@
 */
 
 
-.layout__main {
-    margin-top: 15rem;
-    margin-bottom: 5rem;
-}
-
 .layout__title {
     font-size: 2.4rem;
 }
@@ -21,9 +16,11 @@
 .main__mostrar-ocultar-elementos {
     max-width: 102.4rem;
     width: 100%;
+    min-height: 46rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap: 2rem;
     padding: 3rem;
     border-radius: 0.5rem;
