--- a/01-manual-jquery/src/styles/02-primeros-pasos-jquery-por-la-practica/04-efectos-rapidos.css
+++ b/01-manual-jquery/src/styles/02-primeros-pasos-jquery-por-la-practica/04-efectos-rapidos.css
@@ -9,18 +9,14 @@
 */
 
 
-.layout__main {
-    margin-top: 15rem;
-    margin-bottom: 5rem;
-}
-
 .main__efectos-rapidos {
     max-width: 102.4rem;
     width: 100%;
-    height: 40rem;
+    min-height: 46rem;
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap: 2rem;
     padding: 3rem;
     border-radius: 0.5rem;
@@ -36,7 +32,6 @@
     font-weight: bold;
     padding: 1rem;
     max-width: 40rem;
-    line-height: 1.4rem;
 }
 
 a {
