--- a/01-manual-jquery/src/styles/02-primeros-pasos-jquery-por-la-practica/05-callback-funciones-jquery.css
+++ b/01-manual-jquery/src/styles/02-primeros-pasos-jquery-por-la-practica/05-callback-funciones-jquery.css
@@ -9,19 +9,16 @@
 */
 
 
-.layout__main {
-    margin-top: 15rem;
-    margin-bottom: 5rem;
-}
-
 .main__callback-funciones-jquery {
     max-width: 102.4rem;
     width: 100%;
+    min-height: 46rem;
     display: flex;
     flex-direction: column;
     gap: 2rem;
     padding: 3rem;
     border-radius: 0.5rem;
+    position: relative;
 }
 
 #micapa {
@@ -30,7 +27,6 @@
     font-weight: bold;
     padding: 10px;
     max-width: 400px;
-    line-height: 1.4rem;
     position: absolute;
     top: 20rem;
     left: 2rem;
