--- a/01-manual-jquery/src/styles/02-primeros-pasos-jquery-por-la-practica/07-ajax-jquery-mensaje-carga.css
+++ b/01-manual-jquery/src/styles/02-primeros-pasos-jquery-por-la-practica/07-ajax-jquery-mensaje-carga.css
@@ -9,17 +9,14 @@
 */
 
 
-.layout__main {
-    margin-top: 15rem;
-    margin-bottom: 5rem;
-}
-
 .main__ajax-jquery-mensaje-carga {
     max-width: 102.4rem;
     width: 100%;
-    height: 20rem;
+    min-height: 46rem;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     gap: 2rem;
     padding: 3rem;
     border-radius: 0.5rem;
