--- a/01-manual-jquery/src/styles/01-introduccion-jquery/03-cuando-usar-jquery.css
+++ b/01-manual-jquery/src/styles/01-introduccion-jquery/03-cuando-usar-jquery.css
@@ -4,75 +4,15 @@
     ----------  /01-manual-jquery/  ---------------------
     ----------  /src/styles/  ---------------------------
     ----------  /01-introduccion-jquery/  ---------------
-    ----------  /introduccion-jquery.css/  --------------
+    ----------  /03-cuando-usar-jquery.css/  ------------
     -----------------------------------------------------
 */
-
-
-/*
-    --------------------------------
-    ----------  1. demo1  ----------
-    --------------------------------
-*/
-
-.main__demo1 {
-    max-width: 102.4rem;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    padding: 3rem;
-    border-radius: 0.5rem;
-}
-
-#capa1 {
-    padding: 2rem; 
-    color: #fff;
-    background-color: #ff8800;
-    text-align: center;
-}
-
-
-
-/*
-    --------------------------------
-    ----------  2. demo2  ----------
-    --------------------------------
-*/
-
-.main__demo2 {
-    max-width: 102.4rem;
-    width: 100%;
-    height: 30rem;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    padding: 3rem;
-    border-radius: 0.5rem;
-}
-
-#capa2 {
-    padding: 2rem; 
-    color: #fff;
-    background-color: #ff8800;
-    font-weight: bold;
-    text-align: center;
-}
-
-#mensaje2 {
-    display: none;
-    padding: 2rem;
-    color: #fff;
-    background-color: #8cc3e2;
-    font-weight: bold;
-    text-align: center;
-}
 
 
 
 /*
     -----------------------------------------
-    ----------  3. definir-evento  ----------
+    ----------  1. definir-evento  ----------
     -----------------------------------------
 */
 
@@ -96,7 +36,7 @@
 
 /*
     -----------------------------------------
-    ----------  4. document-ready  ----------
+    ----------  2. document-ready  ----------
     -----------------------------------------
 */
 
@@ -121,7 +61,7 @@
 
 /*
     --------------------------------------------
-    ----------  5. recorrer-parrafos  ----------
+    ----------  3. recorrer-parrafos  ----------
     --------------------------------------------
 */
 
@@ -153,7 +93,7 @@
 
 /*
     -------------------------------------
-    ----------  6. acceso-api  ----------
+    ----------  4. acceso-api  ----------
     -------------------------------------
 */
 
@@ -197,8 +137,8 @@
 
 /*
     -------------------------------------------------------------
-    ----------  7. recuperar-mostrar-datos-javascript  ----------
-    ----------  8. recuperar-mostrar-datos-jquery  --------------
+    ----------  5. recuperar-mostrar-datos-javascript  ----------
+    ----------  6. recuperar-mostrar-datos-jquery  --------------
     -------------------------------------------------------------
 */
 
