--- a/01-manual-jquery/src/styles/01-introduccion-jquery/01-introduccion-jquery.css
+++ b/01-manual-jquery/src/styles/01-introduccion-jquery/01-introduccion-jquery.css
@@ -18,9 +18,10 @@
 .main__introduccion {
     max-width: 102.4rem;
     width: 100%;
-    min-height: 46rem;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
     gap: 2rem;
     padding: 3rem;
     border-radius: 0.5rem;
