--- a/01-manual-jquery/src/styles/02-primeros-pasos-jquery-por-la-practica/07-ajax-jquery-mensaje-carga.css
+++ b/01-manual-jquery/src/styles/02-primeros-pasos-jquery-por-la-practica/07-ajax-jquery-mensaje-carga.css
@@ -12,12 +12,11 @@
 .main__ajax-jquery-mensaje-carga {
     max-width: 102.4rem;
     width: 100%;
-    min-height: 46rem;
+    height: 30rem;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    gap: 2rem;
+    gap: 4rem;
     padding: 3rem;
     border-radius: 0.5rem;
 }
