--- a/01-manual-jquery/src/styles/01-introduccion-jquery/02-demos-muy-simples.css
+++ b/01-manual-jquery/src/styles/01-introduccion-jquery/02-demos-muy-simples.css
@@ -9,57 +9,32 @@
 */
 
 
-/*
-    --------------------------------
-    ----------  1. demo1  ----------
-    --------------------------------
-*/
-
-.main__demo1 {
-    max-width: 102.4rem;
-    width: 100%;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    padding: 3rem;
-    border-radius: 0.5rem;
-}
-
 #capa1 {
+    width: 30rem;
     padding: 2rem; 
     color: #fff;
     background-color: #ff8800;
     text-align: center;
+    cursor: pointer;
 }
 
-
-
-/*
-    --------------------------------
-    ----------  2. demo2  ----------
-    --------------------------------
-*/
-
-.main__demo2 {
-    max-width: 102.4rem;
-    width: 100%;
-    height: 30rem;
-    display: flex;
-    flex-direction: column;
-    gap: 2rem;
-    padding: 3rem;
-    border-radius: 0.5rem;
+.main__section--demo2 {
+    height: 33rem;
 }
 
 #capa2 {
+    width: 30rem;
     padding: 2rem; 
     color: #fff;
     background-color: #ff8800;
     font-weight: bold;
     text-align: center;
+    cursor: pointer;
 }
 
 #mensaje2 {
+    width: 30rem;
+    margin-top: 3rem;
     display: none;
     padding: 2rem;
     color: #fff;
