--- a/01-manual-jquery/src/styles/02-primeros-pasos-jquery-por-la-practica/01-pasos-jquery-en-web.css
+++ b/01-manual-jquery/src/styles/02-primeros-pasos-jquery-por-la-practica/01-pasos-jquery-en-web.css
@@ -9,20 +9,7 @@
 */
 
 
-.main__pasos-jquery-en-web {
-    max-width: 160rem;
-    width: 100%;
-    min-height: 46rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 2rem;
-    padding: 3rem;
-    border-radius: 0.5rem;
-}
-
-a {
+#enlace {
     padding: 2rem;
     color: #fff;
     background-color: rgb(147, 182, 248);
@@ -31,7 +18,7 @@ a {
     border-radius: 5px;
 }
 
-a:hover {
+#enlace:hover {
     padding: 2rem;
     color: #fff;
     background-color: rgb(32, 74, 153);
