--- a/01-manual-jquery/src/styles/02-primeros-pasos-jquery-por-la-practica/04-efectos-rapidos.css
+++ b/01-manual-jquery/src/styles/02-primeros-pasos-jquery-por-la-practica/04-efectos-rapidos.css
@@ -9,19 +9,6 @@
 */
 
 
-.main__efectos-rapidos {
-    max-width: 102.4rem;
-    width: 100%;
-    min-height: 46rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    gap: 2rem;
-    padding: 3rem;
-    border-radius: 0.5rem;
-}
-
 .capa-efectos__container {
     height: 15rem;
 }
@@ -34,7 +21,7 @@
     max-width: 40rem;
 }
 
-a {
+.enlace {
     padding: 1rem 2rem;
     color: #fff;
     background-color: rgb(147, 182, 248);
@@ -43,7 +30,7 @@ a {
     border-radius: 5px;
 }
 
-a:hover {
+.enlace:hover {
     color: #fff;
     background-color: rgb(32, 74, 153);
     cursor: pointer;
