--- a/01-manual-jquery/src/styles/02-primeros-pasos-jquery-por-la-practica/07-ajax-jquery-mensaje-carga.css
+++ b/01-manual-jquery/src/styles/02-primeros-pasos-jquery-por-la-practica/07-ajax-jquery-mensaje-carga.css
@@ -9,19 +9,11 @@
 */
 
 
-.main__ajax-jquery-mensaje-carga {
-    max-width: 102.4rem;
-    width: 100%;
-    height: 30rem;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 4rem;
-    padding: 3rem;
-    border-radius: 0.5rem;
+.main__section--mensaje-carga {
+    height: 21rem;
 }
 
-a {
+.enlace {
     padding: 1rem 2rem;
     color: #fff;
     background-color: rgb(147, 182, 248);
@@ -30,7 +22,7 @@ a {
     border-radius: 5px;
 }
 
-a:hover {
+.enlace:hover {
     color: #fff;
     background-color: rgb(32, 74, 153);
     cursor: pointer;
