--- a/01-manual-jquery/src/styles/layout-main.css
+++ b/01-manual-jquery/src/styles/layout-main.css
@@ -16,22 +16,36 @@
     justify-content: center;
     align-items: center;
     gap: 5rem;
-    margin-top: 10rem; 
+    margin-top: 10rem;
     margin-bottom: 5rem;
 }
 
-.main__background {
+/* .main__background {
+    background: radial-gradient(circle, rgb(255, 255, 255), rgb(219, 228, 240), rgb(176, 196, 236));
+    box-shadow: 50px 50px 100px rgb(209, 220, 235);
+} */
+
+.main__section {
+    max-width: 102.4rem;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    /* justify-content: center; */
+    gap: 3rem;
+    padding: 3rem 5rem;
+    border-radius: 0.5rem;
     background: radial-gradient(circle, rgb(255, 255, 255), rgb(219, 228, 240), rgb(176, 196, 236));
     box-shadow: 50px 50px 100px rgb(209, 220, 235);
 }
 
-.main__banner {
+/* .main__banner {
     width: 100%;
     max-width: 102.4rem;
     padding: 3rem;
     border-radius: 5px;
     box-shadow: 0 10px 30px rgba(0, 0, 0, 0.3);
-}
+} */
 
 .banner__img {
     width: 100%;
@@ -73,5 +87,16 @@
     .layout__main {
         margin-top: -5rem;
     }
-    
+
+    .main__section {
+        padding: 2rem;
+    }
+}
+
+@media (max-width: 568px) {
+
+    .main__section {
+        padding: 1rem;
+        
+    }
 }
